--- a/app backend/src/main/resources/application.properties
+++ b/app backend/src/main/resources/application.properties
@@ -1,2 +1,38 @@
 spring.application.name=demo
-server.port=8081
+server.port=8080
+
+# MySQL Database Configuration - Standard Local Installation
+spring.datasource.url=jdbc:mysql://localhost:3306/commercial_spaces_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration pentru MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Asigur? c? folosim UTF-8 pentru caractere române?ti
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.CharSet=utf8mb4
+spring.jpa.properties.hibernate.connection.useUnicode=true
+
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
+
+# JSON Configuration
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=NON_NULL
+
+# Logging pentru debugging (po?i s? le comentezi dup? ce totul func?ioneaz?)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Pentru a vedea mai bine SQL-urile în consola Spring Boot
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
