--- a/backend login/src/main/resources/application.properties
+++ b/backend login/src/main/resources/application.properties
@@ -1,2 +1,38 @@
-spring.application.name=auth-service
+spring.application.name=login-service
 server.port=8081
+
+# MySQL Database Configuration - Aceea?i baz? de date ca ?i backend-ul principal
+spring.datasource.url=jdbc:mysql://localhost:3306/commercial_spaces_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Nu modifica structura bazei de date (backend-ul principal o gestioneaz?)
+spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
+
+# JSON Configuration
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=NON_NULL
+
+# JWT Configuration (op?ional)
+jwt.secret=mySecretKey
+jwt.expiration=86400000
+
+# CORS Configuration
+cors.allowed-origins=http://localhost:3000
+
+# Logging
+logging.level.com.example.demo=INFO
+logging.level.org.springframework.security=DEBUG
